src/pages/form/form.scss
.form {
  input {
    color: gray;
  }
  .fileUpload {
    margin-top: 10px;
  }
  .uploadIcon {
    cursor: pointer;
  }
  .checkbox-input {
    label {
      display: inline-block;
    }
    input {
      width: 30px;
      margin-left: 10px;
      color: gray;
    }
  }

  .radio-input {
    label {
      display: inline-block;
    }
  }
  input.radio-btn {
    width: 30px;
  }
  .textArea {
    border: navajowhite;
    border-bottom: 1px solid gray;
    color: gray;
  }

  .submitBtn {
    width: 150px;
    padding: 10px;
    border: none;
    background-color: teal;
    color: white;
    font-weight: bold;
    cursor: pointer;
    margin-top: 10px;
  }
}

